--- a/ProjectLocation/mybatisPlusDemo/src/main/resources/application.properties
+++ b/ProjectLocation/mybatisPlusDemo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-#???????
+spring.profiles.active=dev
+#数据源配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mybatis-plus?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
-#??mybatis??
+#mybatis日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
